# RustLog

./: Cargo.toml  README.md
benches/: read_path.rs
docs/: ARCHITECTURE.md  CONSUMER_OFFSETS.md  DESIGN_DECISIONS.md  FAILURE_MODES.md  LIMITATIONS.md  PERFORMANCE.md  PROTOCOL.md  STORAGE.md
examples/: consumer.rs  metrics_client.rs  ping.rs  producer.rs  simple_client.rs
src/: error.rs  lib.rs  main.rs
src/admin/: manager.rs  mod.rs
src/broker/: connection.rs  limits.rs  server.rs
src/metrics/: histogram.rs  mod.rs  registry.rs
src/offsets/: manager.rs
src/protocol/: frame.rs  mod.rs  request.rs  response.rs
src/storage/: cleaner_checkpoint.rs  compaction.rs  index.rs  index_rebuild.rs  mmap.rs  mod.rs  retention.rs  segment.rs
src/topics/: partition.rs
tests/: admin_integration_test.rs  integration_test.rs  phase3_backpressure_test.rs  phase4_retention_correctness_test.rs  phase4_retention_test.rs  phase5_cleaner_checkpoint_test.rs  phase5_crash_safety_test.rs  phase6_compaction_test.rs  phase7_index_rebuild_test.rs  test_minimal_isolation.rs  test_simplified_normal.rs
