[package]
name = "kafka-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
bytes = "1"
memmap2 = "0.9"
serde_json = "1"
lazy_static = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "read_path"
harness = false
